<resources>
    <string name="app_name">WorkManagement</string>

    <!--
        ■命名規則
            0.画面名
                Activity、Fragmentのフルネームor略称
            1.ツールバーに表示する画面タイトル
                toolbar_title_<画面名>
            2.ユーザに表示するメッセージ
                message_<メッセージ概要>
            3.ボタンに表示するテキスト
                btn_<画面名>_<テキスト概要>
            4.タブタイトル
                tab_title_<画面名>
            5.共通（「保存」とか「スタート」とか）
                短い英単語で表現
                例：save, start
            6.EditTextのヒント等
                edittext_hint_<画面名>_<ヒントの内容>
            7.レイアウトファイルに存在する項目名など
                layoutitem_<画面名>_<アイテムの説明>

            追加があれば足していく...
    -->

    <!--  ログ向けのタグ  -->
    <string name="log_tag">WM</string>

    <!--  共通  -->
    <string name="start">スタート！</string>
    <string name="save">保存</string>
    <string name="delete">削除</string>
    <string name="zero">0</string>
    <string name="ok">OK</string>
    <string name="cancel">キャンセル</string>
    <string name="empty" />

    <!--  ツールバー  -->


    <!--  トップメニュー  -->
    <string name="toolbar_title_topmenu">トップメニュー</string>
    <string name="btn_topmenu_input_salary">給与情報の登録/修正</string>
    <string name="btn_topmenu_input_bonus">ボーナス情報の登録/修正</string>
    <string name="btn_topmenu_analyze_annual_data">年間データの閲覧</string>

    <!--  登録トップメニュー  -->
    <string name="toolbar_title_resistermenu">登録トップ</string>
    <string name="btn_resistermenu_normal">毎月の給料を登録/修正</string>
    <string name="btn_resistermenu_bonus">ボーナスを登録/修正</string>

    <!--  年月選択  -->
    <string name="toolbar_title_check_target_year_month">対象年月選択</string>
    <string name="message_check_target_year_month_1">入力対象の年月を選択してください</string>
    <string name="message_check_target_year_month_2">(入力済みデータにはアイコンが付いています)</string>

    <string name="salary_description">%1$d年%2$02d月分の給与</string>
    <string name="bonus_description">%1$d年%2$02d月分のボーナス</string>

    <string name="toast_save">データを保存しました</string>
    <string name="toast_update">データを更新しました</string>
    <string name="toast_delete">データを削除しました</string>
    <string name="toast_cancel">データ入力をキャンセルしました</string>
    <string name="toast_error">エラーが発生しました</string>

    <string name="toolbar_title_input">情報入力</string>
    <string name="tab_title_workstatus">勤怠状態</string>
    <string name="tab_title_income">収入</string>
    <string name="tab_title_deduction">控除</string>

    <string name="dialog_title">下記の項目を確認してください</string>
    <string name="dialog_message">
        未入力の項目があります。\n
        未入力項目は値が0で登録されますが、よろしいですか？
    </string>
    <string name="dialog_message_after_tax">
        手取り金額（収入総額から控除総額を引いた金額）は\n
        %1$s円\n
        です。
    </string>

    <string name="dialog_title_delete">削除しますか？</string>
    <string name="dialog_message_delete">
        データ「%1$s」を削除します。
    </string>


    <!--  合計  -->
    <string name="layoutitem_workstatus_top">合計労働時間</string>
    <string name="layoutitem_workstatus_top_unit">時間</string>

    <string name="layoutitem_income_top">収入総額</string>
    <string name="layoutitem_income_top_unit">円</string>

    <string name="layoutitem_deduction_top">控除総額</string>
    <string name="layoutitem_deduction_top_unit">円</string>


    <!--  勤怠情報入力フラグメント  -->
    <!--  共通  -->
    <string name="layoutitem_workstatus_common_subtitle">0.1時間単位で入力可能です。</string>
    <string name="layoutitem_workstatus_common_unit">時間</string>
    <string name="layoutitem_workstatus_common_error">
        入力形式が正しくありません。\n
        0.1時間単位で入力してください。(最大は744です。)
    </string>

    <string name="layoutitem_workstatus_workingday_title">勤務日数</string>
    <string name="layoutitem_workstatus_workingday_subtitle">0.5日単位で入力可能です。</string>
    <string name="edittext_hint_workstatus_workingday">例：18.5</string>
    <string name="layoutitem_workstatus_workingday_unit">日</string>
    <string name="layoutitem_workstatus_workingday_error">
        入力形式が正しくありません。\n
        0.5日単位で入力してください。(最大は31です。)
    </string>

    <string name="layoutitem_workstatus_workingtime_title">所定労働時間</string>
    <string name="edittext_hint_workstatus_workingtime">例：150</string>

    <string name="layoutitem_workstatus_overtime_title">残業時間</string>
    <string name="edittext_hint_workstatus_overtime">例：19.3</string>

    <string name="layoutitem_workstatus_paid_holiday_title">有給休暇</string>
    <string name="edittext_hint_workstatus_paid_holiday">例：1.5</string>


    <!--  収入情報入力フラグメント  -->
    <!--  共通  -->
    <string name="layoutitem_income_common_subtitle">1円単位で入力可能です。</string>
    <string name="layoutitem_income_common_unit">円</string>
    <string name="layoutitem_income_common_error">
        入力形式が正しくありません。\n
        1円単位で入力してください。
    </string>

    <string name="layoutitem_income_baseincome_title">基本支給額</string>
    <string name="edittext_hint_income_baseincome">例：250000</string>

    <string name="layoutitem_income_overtime_title">残業手当</string>
    <string name="edittext_hint_income_overtime">例：50000</string>

    <string name="layoutitem_income_other_title">その他（資格報奨金など）</string>
    <string name="edittext_hint_income_other">例：30000</string>

    <!--  控除情報入力フラグメント  -->
    <!--  共通  -->
    <string name="layoutitem_deduction_common_subtitle">1円単位で入力可能です。</string>
    <string name="layoutitem_deduction_common_unit">円</string>
    <string name="layoutitem_deduction_common_error">
        入力形式が正しくありません。\n
        1円単位で入力してください。
    </string>

    <string name="layoutitem_deduction_health_title">健康保険料</string>
    <string name="edittext_hint_deduction_health">例：10000</string>

    <string name="layoutitem_deduction_pension_title">年金保険料</string>
    <string name="edittext_hint_deduction_pension">例：10000</string>

    <string name="layoutitem_deduction_longterm_title">介護保険料</string>
    <string name="edittext_hint_deduction_longterm">例：10000</string>

    <string name="layoutitem_deduction_employment_title">雇用保険料</string>
    <string name="edittext_hint_deduction_employment">例：10000</string>

    <string name="layoutitem_deduction_income_title">所得税</string>
    <string name="edittext_hint_deduction_income">例：10000</string>

    <string name="layoutitem_deduction_resident_title">住民税</string>
    <string name="edittext_hint_deduction_resident">例：10000</string>

    <string name="layoutitem_deduction_other_title">その他</string>
    <string name="edittext_hint_deduction_other">例：10000</string>

    <!--  データ分析  -->
    <!--  内訳表示用のインデント（Unicodeで半角スペース4文字）  -->
    <string name="toolbar_title_annual_analyze">年間データの閲覧</string>
    <string name="annual_analyze_row_indent">\u0020\u0020\u0020\u0020</string>
    <string name="layout_item_display_annual_data_button">詳細を表示</string>
    <string name="annual_analyze_row_unit_day">日</string>
    <string name="annual_analyze_row_unit_time">時間</string>
    <string name="annual_analyze_row_unit_money">円</string>
    <string name="annual_analyze_row_working_day">合計勤務日数</string>
    <string name="annual_analyze_row_paid_holiday">合計有給休暇</string>
    <string name="annual_analyze_row_working_time">合計労働時間</string>
    <string name="annual_analyze_row_base_working_time">所定労働時間</string>
    <string name="annual_analyze_row_over_working_time">残業時間</string>
    <string name="annual_analyze_row_income">合計収入額</string>
    <string name="annual_analyze_row_base_income">基本支給額</string>
    <string name="annual_analyze_row_overtime_income">残業手当</string>
    <string name="annual_analyze_row_other_income">その他(給与)</string>
    <string name="annual_analyze_row_bonus">ボーナス支給額</string>
    <string name="annual_analyze_row_bonus_other">その他(ボーナス)</string>
    <string name="annual_analyze_row_deduction">合計控除額</string>
    <string name="annual_analyze_row_deduction_health">健康保険料</string>
    <string name="annual_analyze_row_deduction_long_term">介護保険料</string>
    <string name="annual_analyze_row_deduction_pension">年金保険料</string>
    <string name="annual_analyze_row_deduction_employment">雇用保険料</string>
    <string name="annual_analyze_row_deduction_income">所得税</string>
    <string name="annual_analyze_row_deduction_resident">住民税</string>
    <string name="annual_analyze_row_deduction_other">その他</string>
    <string name="annual_analyze_row_after_tax_income">手取りの総額</string>

    <!--  グラフ表示  -->
    <string name="toolbar_title_chart">詳細情報</string>
    <string name="bar_chart_description_working_day">%1$d年の勤務日数</string>
    <string name="bar_chart_description_working_day_for_work_year">%1$d年度の勤務日数</string>
    <string name="bar_chart_description_paid_holiday">%1$d年に取得した有給休暇</string>
    <string name="bar_chart_description_paid_holiday_for_work_year">%1$d年度に取得した有給休暇</string>
    <string name="bar_chart_description_working_time">%1$d年の労働時間</string>
    <string name="bar_chart_description_working_time_for_work_year">%1$d年度の労働時間</string>
    <string name="bar_chart_description_salary">%1$d年の月収（控除前）</string>
    <string name="bar_chart_description_salary_for_work_year">%1$d年度の月収（控除前）</string>
    <string name="bar_chart_description_bonus">%1$d年のボーナス（控除前）</string>
    <string name="bar_chart_description_bonus_for_work_year">%1$d年度のボーナス（控除前）</string>
    <string name="bar_chart_description_deduction">%1$d年の月別控除</string>
    <string name="bar_chart_description_deduction_for_work_year">%1$d年度の月別控除</string>
    <string name="bar_chart_description_bonus_deduction">%1$d年のボーナス控除</string>
    <string name="bar_chart_description_bonus_deduction_for_work_year">%1$d年度のボーナス控除</string>
    <string name="bar_chart_description_after_tax">%1$d年の月収（手取り）</string>
    <string name="bar_chart_description_after_tax_for_work_year">%1$d年度の月収（手取り）</string>
    <string name="bar_chart_description_bonus_after_tax">%1$d年のボーナス（手取り）</string>
    <string name="bar_chart_description_bonus_after_tax_for_work_year">%1$d年度のボーナス（手取り）</string>

    <!--  凡例用のラベル  -->
    <string name="bar_chart_label_work_time">所定労働時間</string>
    <string name="bar_chart_label_overtime">残業時間</string>
    <string name="bar_chart_label_base">基本支給</string>
    <string name="bar_chart_label_overtime_salary">残業手当</string>
    <string name="bar_chart_label_health_insurance">健保</string>
    <string name="bar_chart_label_long_term_care_insurance">介保</string>
    <string name="bar_chart_label_pension">年保</string>
    <string name="bar_chart_label_employment_insurance">雇保</string>
    <string name="bar_chart_label_income_tax">所得税</string>
    <string name="bar_chart_label_resident_tax">住民税</string>
    <string name="bar_chart_label_other">その他</string>

    <!--  グラフ長押しダイアログ  -->
    <string name="chart_dialog_title_working_day">勤務日数\n単位：日</string>
    <string name="chart_dialog_title_paid_holiday">有給休暇日数\n単位：日</string>
    <string name="chart_dialog_title_working_time">所定労働時間\n単位：時間</string>
    <string name="chart_dialog_title_overtime">残業時間\n単位：時間</string>
    <string name="chart_dialog_title_base_income">基本支給額\n単位：円</string>
    <string name="chart_dialog_title_overtime_income">残業手当\n単位：円</string>
    <string name="chart_dialog_title_health_insurance">健康保険\n単位：円</string>
    <string name="chart_dialog_title_long_term_care_insurance">介護保険\n単位：円</string>
    <string name="chart_dialog_title_pension">年金保険\n単位：円</string>
    <string name="chart_dialog_title_employment_insurance">雇用保険\n単位：円</string>
    <string name="chart_dialog_title_income_tax">所得税\n単位：円</string>
    <string name="chart_dialog_title_resident_tax">住民税\n単位：円</string>
    <string name="chart_dialog_title_other">その他\n単位：円</string>
    <string name="chart_dialog_title_after_tax">手取り\n単位：円</string>
    <string name="chart_dialog_title_sum_time_per_month">月別合計\n単位：時間</string>
    <string name="chart_dialog_title_sum_money_per_month">月別合計\n単位：円</string>
    <string name="chart_dialog_value_month">%1$d月</string>
    <string name="chart_dialog_value_day">%1$s日</string>
    <string name="chart_dialog_value_time">%1$s時間</string>

</resources>