<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.input.common.CheckTargetYearMonthActivity"
    android:orientation="vertical" >

    <!-- ツールバー  -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/MyToolBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_check_target_year_month_1"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:autoSizeTextType="uniform"
        android:lines="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_check_target_year_month_2"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:autoSizeTextType="uniform"
        android:lines="1"/>

    <Spinner
        android:id="@+id/sp_target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/layout_dropdown_border" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!--  次画面遷移用のボタン  -->
    <Button
        android:id="@+id/btn_start"
        style="@style/CustomLayoutButton"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/start"
        android:background="@drawable/selector_next"/>

</LinearLayout>